--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         <div class="nav-wrapper container">
           <a id="logo-container" href="#" class="brand-logo"><img src="img/logo-world-survive.png" height="200" width="270" alt=""></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">Entrar</a></li>
-            <li><a href="#">Criar conta</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="login.html">Entrar</a></li>
+            <li><a href="new-account.html">Criar conta</a></li>
+            <li><a href="contato.html">Contato</a></li>
           </ul>
 
            <ul id="nav-mobile" class="side-nav">
-            <li><a href="#">Entrar</a></li>
-            <li><a href="#">Criar conta</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="login.html">Entrar</a></li>
+            <li><a href="new-account.html">Criar conta</a></li>
+            <li><a href="contato.html">Contato</a></li>
           </ul>
-          <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a> -->
+          <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
         </div>
         </nav>
 
@@ -49,12 +49,12 @@
         <div class="section no-pad-bot">
           <div class="container">
             <br><br>
-            <h3 class="header center">Parallax Template</h3>
+            <h4 class="header center">Como funciona?</h4>
             <div class="row center">
-              <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+              <h5 class="header col s12 light">Nós unimos seus resíduos com cooperativas perto de você!</h5>
             </div>
             <div class="row center">
-              <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+              <a href="login.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Solicitar coleta</a>
             </div>
             <br><br>
 
@@ -71,8 +71,8 @@
           <div class="row">
             <div class="col s12 m4">
               <div class="icon-block">
-                <h2 class="center blue-text text-accent-3"><i class="material-icons">flash_on</i></h2>
-                <h5 class="center">Speeds up development</h5>
+                <h2 class="center blue-text text-accent-3"><i class="material-icons">delete</i></h2>
+                <h5 class="center">Separe seu lixo reciclável</h5>
 
                 <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
               </div>
@@ -80,8 +80,8 @@
 
             <div class="col s12 m4">
               <div class="icon-block">
-                <h2 class="center blue-text text-accent-3"><i class="material-icons">group</i></h2>
-                <h5 class="center">User Experience Focused</h5>
+                <h2 class="center blue-text text-accent-3"><i class="material-icons">my_location</i></h2>
+                <h5 class="center">Informe seu endereço</h5>
 
                 <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
               </div>
@@ -89,8 +89,8 @@
 
             <div class="col s12 m4">
               <div class="icon-block">
-                <h2 class="center blue-text text-accent-3"><i class="material-icons">settings</i></h2>
-                <h5 class="center">Easy to work with</h5>
+                <h2 class="center blue-text text-accent-3"><i class="material-icons">schedule</i></h2>
+                <h5 class="center">Agende uma coleta</h5>
 
                 <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
               </div>
@@ -143,7 +143,7 @@
         </div>
         <div class="footer-copyright">
           <div class="container">
-          Made by <a class="cyan-text text-accent-1" href="http://materializecss.com">Materialize</a>
+          Todos os direitos reservados  <a class="cyan-text text-accent-1">World Survive</a>
           </div>
         </div>
         </footer>
