New page and CSS adjustments

--- a/login.html
+++ b/login.html
@@ -45,6 +45,7 @@
 
 
         <div class="section row form-login">
+        <h2 class="form-title">Entre com seus dados</h2>
         <form class="col s12">
           <div class="row">
             <div class="input-field col s12">
@@ -58,6 +59,16 @@
               <label for="password">Senha</label>
             </div>
           </div>
+          <div class="row">
+            <select name="" id="" class="browser-default" multiple style="height: 110px;">
+              <option value="">Vidro</option>
+              <option value="">Papelão</option>
+              <option value="">Alumínio</option>
+              <option value="">4</option>
+              <option value="">5</option>
+            </select>
+          </div>
+
           <div class="row">
             <a class="waves-effect waves-light btn btn-large">ENTRAR</a>
             <a href="new-account.html" class="waves-effect waves-teal btn-flat btn-large">CRIAR CONTA</a>
