--- a/new-account.html
+++ b/new-account.html
@@ -45,6 +45,7 @@
 
 
         <div class="section row form-login">
+        <h2 class="form-title">Cria uma conta gratuitamente</h2>
         <form class="col s12">
           <div class="row">
             <div class="input-field col s12">
